--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "php": "^7.3.0",
         "botman/botman": "dev-master",
         "clue/stdio-react": "^2.3",
-        "illuminate/support": "~5.5.0 || ~5.6.0 || ~5.7.0 || ~5.8.0 || ^6.0 || ^7.0",
-        "illuminate/console": "~5.5.0 || ~5.6.0 || ~5.7.0 || ~5.8.0 || ^6.0 || ^7.0"
+        "illuminate/support": "^8.6",
+        "illuminate/console": "^8.6"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.0 || ^3.5 || ^3.6 || ^3.7 || ^3.8 || ^4.0 || ^5.2"
+        "orchestra/testbench": "^3.0 || ^3.5 || ^3.6 || ^3.7 || ^3.8 || ^4.0 || ^5.2 || ^6.2"
     },
     "repositories": [
         {
