--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "botman/tinker",
+    "name": "softheroes/tinker",
     "license": "MIT",
     "description": "BotMan tinker command for your Laravel BotMan project",
     "keywords": [
